Viendo etiquetas de HTML

--- a/index.html
+++ b/index.html
@@ -6,5 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <hr>
+      <h2>Encabezados</h2>
+      <h1>Encabezado de primer nivel</h1>
+      <h2>Encabezado de segundo nivel</h2>
+      <h3>Encabezado de tercer nivel</h3>
+      <h4>Encabezado de cuarto nivel</h4>
+      <h5>Encabezado de quinto nivel</h5>
+      <h6>Encabezado de sexto nivel</h6>
+      <hr>
+      <h2>Etiquetas de Texto Básicas</h2>
+      <p>Un párrafo</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati dolorem ad sit similique, laborum vel!</p>
+      <p>Palabras en: <b>negrita</b>, <i>itálica</i>, <u>subrayado</u>, e=mc<sup>2</sup>, H<sub>2</sub>O, <small>Letras pequeñas.</small></p>
+      <hr>
+      <h2>Etiquetas de Texto Semánticas</h2>
+      <p>
+        <strong>Este tecto es importante</strong>, <em>Este texto ahce énfasis.</em>
+      </p>
+      <blockquote>Yo sólo sé que no sé nada.</blockquote>
+      <cite>Sócrates</cite>
+      <hr>
+      <h2>Etiquetas de Saltos</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Amet voluptatum optio, ad saepe quia aliquid qui delectus odio quas consequatur.</p>
+      <hr>
+    </div>
+  </body>
 </html>
